# ktx

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  KTX-Software.sln  KtxConfigVersion.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  graphics3d-KTX.sln  ktx.def  ktx.vcxproj  ktx.vcxproj.filters  ktx_read.vcxproj  ktx_read.vcxproj.filters  ktx_version.vcxproj  ktx_version.vcxproj.filters  objUtil.vcxproj  objUtil.vcxproj.filters
Debug/: ktx.exp  ktx.lib
astcenc-neon.xcodeproj/: project.pbxproj
basisu_encoder.xcodeproj/: project.pbxproj
include/: ktx.h  ktxvulkan.h
include/KHR/: khr_df.h
include/ktx/: ktx.h  ktxvulkan.h
interface/basisu_c_binding/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  obj_basisu_cbind.vcxproj  obj_basisu_cbind.vcxproj.filters
ktx.dir/Debug/: exports.def
ktx.dir/Release/: objects.txt
ktx.xcodeproj/: project.pbxproj
tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  texturetests.vcxproj  texturetests.vcxproj.filters  texturetests[1]_include-Debug.cmake  texturetests[1]_include-MinSizeRel.cmake  texturetests[1]_include-RelWithDebInfo.cmake  texturetests[1]_include-Release.cmake  texturetests[1]_include.cmake  unittests.vcxproj  unittests.vcxproj.filters  unittests[1]_include-Debug.cmake  unittests[1]_include-MinSizeRel.cmake  unittests[1]_include-RelWithDebInfo.cmake  unittests[1]_include-Release.cmake  unittests[1]_include.cmake
tests/gtest/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.vcxproj  gtest.vcxproj.filters
tests/streamtests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  streamtests.vcxproj  streamtests.vcxproj.filters  streamtests[1]_include-Debug.cmake  streamtests[1]_include-MinSizeRel.cmake  streamtests[1]_include-RelWithDebInfo.cmake  streamtests[1]_include-Release.cmake  streamtests[1]_include.cmake
tests/transcodetests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  obj_tmp_basisu.vcxproj  obj_tmp_basisu.vcxproj.filters  transcodetests.vcxproj  transcodetests.vcxproj.filters  transcodetests[1]_include-Debug.cmake  transcodetests[1]_include-MinSizeRel.cmake  transcodetests[1]_include-RelWithDebInfo.cmake  transcodetests[1]_include-Release.cmake  transcodetests[1]_include.cmake
tools/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
tools/imageio/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  imageio.vcxproj  imageio.vcxproj.filters
tools/ktx/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ktxtools.vcxproj  ktxtools.vcxproj.filters  ktxtools_version.vcxproj  ktxtools_version.vcxproj.filters
tools/ktx2check/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ktx2check.vcxproj  ktx2check.vcxproj.filters  ktx2check_version.vcxproj  ktx2check_version.vcxproj.filters
tools/ktx2ktx2/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ktx2ktx2.vcxproj  ktx2ktx2.vcxproj.filters  ktx2ktx2_version.vcxproj  ktx2ktx2_version.vcxproj.filters
tools/ktxinfo/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ktxinfo.vcxproj  ktxinfo.vcxproj.filters  ktxinfo_version.vcxproj  ktxinfo_version.vcxproj.filters
tools/ktxsc/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ktxsc.vcxproj  ktxsc.vcxproj.filters  ktxsc_version.vcxproj  ktxsc_version.vcxproj.filters
(+15 files in other folders)
